feat: give admins the buyer seat map with per-seat status and the order behind it